Fixing inverted params in discussions view

--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :breadcrumbs do %>
   <%= breadcrumbs_for_linkable @debatable, link_to(t(:discussions), item_discussions_path(@debatable))%>
-  <%= breadcrumb_list_item('last', @discussion.friendly.truncate_words(4)) %>
+  <%= breadcrumb_list_item(@discussion.friendly.truncate_words(4), 'last') %>
 <% end %>
 
 <div>
