--- a/app/views/exercise_solutions/_kids_results_button.html.erb
+++ b/app/views/exercise_solutions/_kids_results_button.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="actions">
-      <% if assignment.passed? %>
+      <% if assignment.solved? %>
         <%= next_exercise_button(@exercise) || close_modal_button %>
       <% else %>
         <button class="btn btn-success btn-block submission-control" id="kids-btn-retry" data-dismiss="modal" aria-label="<%= t :retry_exercise %>"> <%= t :retry_exercise %> </button>
