--- a/app/views/exercise_solutions/_results.html.erb
+++ b/app/views/exercise_solutions/_results.html.erb
@@ -3,35 +3,42 @@
   @stats = @guide.stats_for(current_user)
 %>
 
-<%= render layout: 'exercise_solutions/contextualization_results_container', locals: {contextualization: assignment} do %>
-  <%= manual_evaluation_comment assignment %>
-  <% unless assignment.manual_evaluation_comment? %>
-    <%= render partial: 'exercise_solutions/contextualization_results', locals: {contextualization: assignment} %>
-    <% if should_render_need_help_dropdown?(assignment) %>
-      <div class="notify-problem-box">
-        <div class="dropdown">
-          <%= link_to fa_icon(:'question-circle', text: t(:need_help)), "", {'data-toggle': 'dropdown'} %>
-          <ul class="dropdown-menu" aria-labelledby="helpDropdown">
-            <li>
-              <%= read_discussions_link(@exercise) %>
-            </li>
-            <li>
-              <%= render_community_link %>
-            </li>
-            <li>
-              <%= report_bug_link(assignment) %>
-            </li>
-          </ul>
+<% if assignment.results_hidden? %>
+  <%= render partial: 'exercise_solutions/results_hidden', locals: {assignment: assignment} %>
+<% elsif !assignment.attempts_left? %>
+  <%= render partial: 'exercise_solutions/out_of_attempts', locals: {assignment: assignment} %>
+<% else %>
+  <%= render layout: 'exercise_solutions/contextualization_results_container', locals: {contextualization: assignment} do %>
+    <%= manual_evaluation_comment assignment %>
+    <% unless assignment.manual_evaluation_comment? %>
+      <%= render partial: 'exercise_solutions/contextualization_results_body', locals: {contextualization: assignment} %>
+      <% if should_render_need_help_dropdown?(assignment) %>
+        <div class="notify-problem-box">
+          <div class="dropdown">
+            <%= link_to fa_icon(:'question-circle', text: t(:need_help)), "", {'data-toggle': 'dropdown'} %>
+            <ul class="dropdown-menu" aria-labelledby="helpDropdown">
+              <li>
+                <%= read_discussions_link(@exercise) %>
+              </li>
+              <li>
+                <%= render_community_link %>
+              </li>
+              <li>
+                <%= report_bug_link(assignment) %>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
+    <%= solution_download_link assignment %>
   <% end %>
-  <%= solution_download_link assignment %>
+
+  <% if assignment.passed? %>
+    <%= corollary_box @exercise %>
+  <% else %>
+    <%= assistance_box assignment %>
+  <% end %>
 <% end %>
 
-<% if assignment.passed? %>
-  <%= corollary_box @exercise %>
-<% else %>
-  <%= assistance_box assignment %>
-<% end %>
 <%= render partial: 'exercise_solutions/results_button', locals: {assignment: assignment} %>
