--- a/app/views/exercise_solutions/_results_title.html.erb
+++ b/app/views/exercise_solutions/_results_title.html.erb
@@ -1,3 +1,3 @@
-<h4 class="text-<%= class_for_status(contextualization.submission_status) %>">
-  <strong><%= fa_icon icon_type_for_status(contextualization.submission_status) %> <%= t_contextualization_status contextualization %></strong>
+<h4 class="text-<%= icon_class_for(contextualization) %>">
+  <strong><%= fa_icon icon_type_for(contextualization) %> <%= t_contextualization_status contextualization %></strong>
 </h4>
