--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_overlap.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_overlap.scss
@@ -5,6 +5,25 @@
 .mu-overlapped {
   z-index: 10;
   position: absolute;
-  bottom: 0;
+  top: 0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  a {
+    cursor: pointer;
+    padding: 5px;
+  }
+  &.multiple-files {
+    top: 43px;
+  }
+}
+
+.editor-resize {
+  font-size: 0.5em;
+}
+
+body.fullscreen {
+  .mu-overlapped a {
+    margin-right: 15px;
+  }
 }
