Introducing format button

--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -11,6 +11,7 @@
         <i class="fa fa-expand fa-stack-1x"></i>
       </span>
     </a>
+    <a class="editor-format"><%= format_icon %></a>
     <a class="editor-reset submission-reset"><%= restart_icon %></a>
   </div>
 </div>
