Using new icons helper methods for contextualizations

--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -29,7 +29,7 @@
         </h3>
       </div>
       <div class="discussion-description">
-        <%= label_for_status(@discussion.status) %> ·
+        <%= label_for_contextualization(@discussion) %> ·
         <span class="discussion-info">
           <span class="discussion-initiator-name">
             <%= @discussion.initiator.name %>
