Adding confirmation button for reset exercise

--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -33,7 +33,7 @@
           <i class="fa fa-expand fa-stack-1x"></i>
         </span>
       </a>
-      <a class="editor-reset submission-reset"><%= restart_icon %></a>
+      <a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a>
     </div>
 
   </div>
