--- a/app/views/layouts/exercise_inputs/editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_code.html.erb
@@ -12,6 +12,6 @@
       </span>
     </a>
     <a class="editor-format"><%= format_icon %></a>
-    <a class="editor-reset submission-reset"><%= restart_icon %></a>
+    <a class="editor-reset submission-reset" data-confirm="<%= t(:confirm_reset) %>"><%= restart_icon %></a>
   </div>
 </div>
