Adding elipsis module

--- a/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_playground_form.html.erb
@@ -17,7 +17,7 @@
       <a class="console-reset submission-reset"><%= restart_icon %></a>
     </div>
   </div>
-  <div role="tabpanel" class="tab-pane mu-input-panel fade" id="visible-extra">
+  <div role="tabpanel" class="tab-pane mu-input-panel fade mu-elipsis" id="visible-extra">
     <%= @assignment.extra_preview_html %>
   </div>
 </div>
