--- a/app/views/exercises/_read_only.html.erb
+++ b/app/views/exercises/_read_only.html.erb
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div role="tabpanel" class="tab-pane mu-input-panel fade" id="visible-extra">
+      <div role="tabpanel" class="tab-pane mu-input-panel fade mu-elipsis" id="visible-extra">
         <%= @discussion.extra_preview_html %>
       </div>
     </div>
