--- a/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
@@ -51,7 +51,7 @@
       <label for="include_solution"><p><%= t(:load_solution_into_console) %></p></label>
     </div>
   </div>
-  <div role="tabpanel" class="tab-pane mu-input-panel fade" id="visible-extra">
+  <div role="tabpanel" class="tab-pane mu-input-panel fade mu-elipsis" id="visible-extra">
     <%= @assignment.extra_preview_html %>
   </div>
   <div role="tabpanel" class="tab-pane mu-input-panel fade" id="messages">
