--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -54,6 +54,10 @@
 </div>
 
 <%= content_for :no_container do %>
+  <% if @assignment.skipped? %>
+    <%= render partial: 'layouts/exercise_skipped' %>
+  <% end %>
+
     <%= render partial: 'layouts/modals/guide_corollary', locals: {guide: @guide} %>
     <%= render partial: 'layouts/modals/new_message', locals: {exercise: @exercise} if should_render_message_input?(@exercise) %>
 <% end if current_user? %>
