Avoid showing corollary for skipped

--- a/app/views/exercise_solutions/_results.html.erb
+++ b/app/views/exercise_solutions/_results.html.erb
@@ -34,7 +34,7 @@
     <%= solution_download_link assignment %>
   <% end %>
 
-  <% if assignment.solved? %>
+  <% if assignment.passed? %>
     <%= corollary_box @exercise %>
   <% else %>
     <%= assistance_box assignment %>
