--- a/app/assets/stylesheets/mumuki_laboratory/application.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application.scss
@@ -14,3 +14,4 @@ $da-font-path: asset-path('assets');
 @import "application/modules";
 @import "application/errors";
 @import "application/alerts";
+@import "application/reader";
