Render summary instead of title when it is absent

--- a/app/views/layouts/_test_results.html.erb
+++ b/app/views/layouts/_test_results.html.erb
@@ -8,7 +8,7 @@
         <% if test_result[:status].failed? %>
           <span class="text-danger">
             <%= status_icon(test_result[:status]) %>
-            <strong class="example-title"><%= test_result[:title] %></strong><%= render_test_result_summary_message test_result %>
+            <%= render_test_result_head test_result %>
             <% unless contextualization.visible_success_output? %>
               <a data-toggle="collapse" href="#example-result-<%= index %>"  class="example-see-more"><%= t :view_details %></a>
             <% end %>
