Always rendering test head

--- a/app/views/layouts/_test_results.html.erb
+++ b/app/views/layouts/_test_results.html.erb
@@ -1,4 +1,5 @@
 <% if contextualization.single_visual_result? %>
+  <span class="text-danger"><%= render_test_result_head contextualization.test_results.first %></span>
   <%= contextualization.single_visual_result_html %>
 <% else %>
   <strong><%= t :test_results %>:</strong>
