Refactor: extracting renderer

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -154,7 +154,7 @@ $kids-speech-tabs-width: 40px;
         }
       }
 
-      &.passed_with_warnings, &.failed.with-summary {
+      &.with-result-item {
         padding-top: 5px;
         padding-bottom: 5px;
 
