Full client-side rendering of results

--- a/app/views/exercise_solutions/_expectations.html.erb
+++ b/app/views/exercise_solutions/_expectations.html.erb
@@ -6,7 +6,7 @@
 
     <ul class="results-list">
       <% assignment.humanized_expectation_results.each do |it| %>
-        <%= humanized_expectation_result_item it %>
+        <li><%= humanized_expectation_result it %></li>
       <% end %>
     </ul>
   </div>
