--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for :user, url: update_user_path, method: :put do |f| %>
   <div class="row mu-tab-body">
     <div class="col-md-4 text-center">
-      <%= image_tag @user.image_url, size: '250x250', class: 'img-circle' %>
+      <%= image_tag @user.profile_picture, size: '250x250', class: 'img-circle' %>
     </div>
     <div class="col-md-8">
       <%= render partial: 'profile_fields', locals: {form: f} %>
