Capitalizing titles in css

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
@@ -10,6 +10,9 @@
 ul.results-list {
   list-style-type: none;
   padding-left: 10px;
+  li {
+    text-transform: capitalize
+  }
 }
 
 .results-list pre {
