--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
@@ -10,7 +10,7 @@
 ul.results-list {
   list-style-type: none;
   padding-left: 10px;
-  li {
+  li:first-letter {
     text-transform: capitalize
   }
 }
