Rendering titles in a more semantic way

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_exercise_results.scss
@@ -30,3 +30,11 @@ ul.results-list {
     color: white;
   }
 }
+
+.mu-single-test-result {
+  .error-text, /* backward compatibility with gobstones runner */
+  .mu-test-result-header {
+    display: block;
+    line-height: 25px;
+  }
+}
