--- a/app/views/errors/gone.html.erb
+++ b/app/views/errors/gone.html.erb
@@ -4,7 +4,10 @@
     </div>
     <div class="body">
       <p>
-        <%= t(:gone_explanation, error: link_to_status_codes(410)).html_safe %>
+        <%= t(:error_description, error: link_to_status_codes(410)).html_safe %>
+      </p>
+      <p>
+        <%= Organization.current.explain_error(410, explanation).html_safe %>
       </p>
       <p>
         <a class="btn btn-success" href="/"> <%= t(:back_to_mumuki) %> </a>
