--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -5,6 +5,7 @@
 @import "modules/upload";
 @import "modules/console";
 @import "modules/progress_listing";
+@import "modules/avatar";
 @import "modules/book_header";
 @import "modules/progress_bar";
 @import "modules/timer";
