--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -2,6 +2,7 @@
   <div class="row mu-tab-body">
     <div class="col-md-4 text-center">
       <%= image_tag @user.profile_picture, size: '250x250', class: 'img-circle' %>
+      <i class="fa fa-pencil fa-2x pointer edit-avatar" id="edit-avatar-icon"></i>
     </div>
     <div class="col-md-8">
       <%= render partial: 'profile_fields', locals: {form: f} %>
