Show empty modal when clicking on edit avatar button

--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -10,3 +10,7 @@
     </div>
   </div>
 <% end %>
+
+<%= content_for :no_container do %>
+    <%= render partial: 'layouts/modals/avatar_picker' %>
+<% end %>
