Show empty modal when clicking on edit avatar button

--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -7,3 +7,7 @@
     <%= image_tag @user.profile_picture, class: 'mu-user-avatar', id: 'mu-user-avatar' %>
   </div>
 </div>
+
+<%= content_for :no_container do %>
+    <%= render partial: 'layouts/modals/avatar_picker' %>
+<% end %>
