--- a/app/views/layouts/modals/_avatar_picker.html.erb
+++ b/app/views/layouts/modals/_avatar_picker.html.erb
@@ -9,16 +9,7 @@
         </div>
       </div>
       <div class="modal-body">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 text-center">
-            </div>
-          </div>
-        </div>
+        <%= render partial: 'avatar_list' %>
       </div>
     </div>
   </div>
