--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -12,3 +12,19 @@
 
   padding: 15px;
 }
+
+.avatar-item {
+  width: 150px;
+  height: 150px;
+
+  border-radius: 50%;
+  border: 2px solid $mu-color-dark-separator;
+
+  padding: 2px;
+  margin: 10px;
+
+  &:hover {
+    box-shadow: -3px 3px 10px -3px $mu-color-primary;
+    transform: scale(1.025);
+  }
+}
