--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -32,7 +32,7 @@
 
   <h2><%= t(:chapters) %></h2>
 
-  <% @book.chapters.each do |it| %>
+  <% @book.enabled_chapters_in(current_workspace).each do |it| %>
     <div class="chapter">
       <h3><%= it.number %>. <%= link_to_path_element it, mode: :plain %></h3>
 
