--- a/app/views/users/_avatar_list.html.erb
+++ b/app/views/users/_avatar_list.html.erb
@@ -7,5 +7,9 @@
     <% if @user.image_url %>
       <%= image_tag @user.image_url, class: 'mu-avatar-item', id: 'mu-user-image' %>
     <% end %>
+
+    <% if @user.image_url %>
+      <%= image_tag @user.image_url, class: 'avatar-item' %>
+    <% end %>
   </div>
 </div>
