Prefix all avatar-related classes and ids with mu-

--- a/app/views/layouts/modals/_avatar_picker.html.erb
+++ b/app/views/layouts/modals/_avatar_picker.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="avatar-picker" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="mu-avatar-picker" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
