--- a/app/views/users/_avatar_list.html.erb
+++ b/app/views/users/_avatar_list.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="avatar-list">
+  <div class="mu-avatar-list">
     <% avatars_for(current_user).sort_by(&:id).each do |it| %>
-      <img src="<%= it.image_url %>" alt="<%= it.description %>" avatar_id="<%= it.id %>" class='avatar-item'>
+      <img src="<%= it.image_url %>" alt="<%= it.description %>" mu-avatar-id="<%= it.id %>" class='mu-avatar-item'>
     <% end %>
 
     <% if @user.image_url %>
-      <%= image_tag @user.image_url, class: 'avatar-item' %>
+      <%= image_tag @user.image_url, class: 'mu-avatar-item' %>
     <% end %>
   </div>
 </div>
