--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -1,10 +1,10 @@
-.edit-avatar {
+.mu-edit-avatar {
   position: relative;
   top: 100px;
   right: 15px;
 }
 
-.avatar-list {
+.mu-avatar-list {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -13,7 +13,7 @@
   padding: 15px;
 }
 
-.avatar-item {
+.mu-avatar-item {
   width: 150px;
   height: 150px;
 
