Graying instead of hiding chapters

--- a/app/assets/stylesheets/mumuki_laboratory/application.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application.scss
@@ -6,6 +6,7 @@ $da-font-path: asset-path('assets');
 @import "codemirror/codemirror.min";
 @import "codemirror/show-hint.min";
 @import "application/vendor";
+@import "application/disabled";
 @import "application/tooltip";
 @import "application/hovers";
 @import "application/mixins";
