Asking for current_user explicitly to make it more intention revealing

--- a/app/views/layouts/_kids.html.erb
+++ b/app/views/layouts/_kids.html.erb
@@ -17,7 +17,7 @@
     <div class="description"><%= exercise.description_task %></div>
     <div class="hint" style="display: none"><%= exercise.hint_html %></div>
   </div>
-  <div class="mu-kids-character-speech-bubble-failed <%= @assignment&.status %>" style="display: none"></div>
+  <div class="mu-kids-character-speech-bubble-failed <%= current_user? && @assignment.status %>" style="display: none"></div>
 </div>
 <div id="mu-kids-discussion-link-html" class="hidden">
   <%= kids_read_discussions_link(exercise) %>
