--- a/app/views/layouts/modals/_kids_results.html.erb
+++ b/app/views/layouts/modals/_kids_results.html.erb
@@ -9,7 +9,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-12 submission-results">
-                  <% if @assignment&.solved? %>
+                  <% if current_user? && @assignment.solved? %>
                     <%= render partial: 'exercise_solutions/kids_results',
                                  locals: {assignment: @assignment, guide_finished_by_solution: false} %>
                   <% end %>
