--- a/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_multiple_files.html.erb
@@ -26,8 +26,8 @@
       <% end %>
     </div>
 
-    <div class="mu-overlapped">
-      <a class="editor-resize multiple-files" title="<%= t(:fullscreen) %> (F11)">
+    <div class="mu-overlapped multiple-files">
+      <a class="editor-resize" title="<%= t(:fullscreen) %> (F11)">
         <span class="fa-stack fa-lg">
           <i class="fa fa-square-o fa-stack-2x"></i>
           <i class="fa fa-expand fa-stack-1x"></i>
