Avoiding issues with aria

--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -36,7 +36,7 @@
     <div class="chapter-container">
       <div class="chapter <%= enabled ? '' : 'mu-locked' %>">
         <h3><%= it.number %>. <%= link_to_path_element it, mode: :plain %></h3>
-        <div class="text-box">
+        <div class="text-box" <%= 'aria-label=""' unless enabled %>%>
           <%= it.description_teaser_html %>
         </div>
       </div>
