--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -1,3 +1,13 @@
+.mu-user-avatar {
+  width: 250px;
+  height: 250px;
+
+  border: 2px solid $mu-color-dark-separator;
+  border-radius: 50%;
+
+  padding: 2px;
+}
+
 .mu-edit-avatar {
   position: relative;
   top: 100px;
