add border to avatar editor

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_avatar.scss
@@ -21,6 +21,11 @@
   border-radius: 50%;
 }
 
+.border-2 {
+  border: 2px solid $mu-color-dark-separator;
+  padding: 2px;
+}
+
 .mu-edit-avatar {
   position: relative;
   top: 100px;
