--- a/app/views/users/_edit_user_form.html.erb
+++ b/app/views/users/_edit_user_form.html.erb
@@ -2,7 +2,7 @@
   <div class="btn btn-success btn-block" style="width:150px; right:49px; position:absolute; top:87px">Guardar</div>
   <div class="row mu-tab-body">
     <div class="col-md-4 text-center">
-      <%= image_tag @user.profile_picture, class: 'mu-user-avatar', id: 'mu-user-avatar' %>
+      <%= image_tag @user.profile_picture, class: 'mu-user-avatar border-2', id: 'mu-user-avatar' %>
       <i class="fa fa-pencil fa-2x pointer mu-edit-avatar" id="mu-edit-avatar-icon"></i>
     </div>
     <div class="col-md-8">
