--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -29,6 +29,10 @@
 <!--        </svg>-->
       </div>
     </div>
+    <a class="mu-level" id="mu-level">
+        12
+    </a>
+
     <div class="col-md-8">
       <%= render partial: 'profile_fields', locals: {form: f} %>
       <div><%= f.submit t(:save), class: 'btn btn-success btn-block' %></div>
