--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -3,39 +3,26 @@
     <div class="col-md-4 text-center">
       <%= image_tag @user.profile_picture, class: 'mu-user-avatar', id: 'mu-user-avatar' %>
       <div class="experience" ><!-- style="position:relative!important"> -->
-<!--        <svg viewBox="0 0 32 32">-->
-<!--          <circle r="16" cx="16" cy="16" />-->
-
-<!--          <linearGradient id="grad-ucgg-generated" gradientUnits="userSpaceOnUse"-->
-<!--                          x1="0%" y1="0%" x2="100%" y2="0%" gradientTransform="rotate(65)">-->
-<!--            <stop offset="0%" stop-color="#4afaff" stop-opacity="0"/>-->
-<!--            <stop offset="100%" stop-color="#ff0000" stop-opacity="1"/>-->
-<!--          </linearGradient>-->
-<!--          <rect x="0" y="0" width="1" height="1" fill="url(#grad-ucgg-generated)" />-->
-
-<!--          <style>-->
-<!--            circle {-->
-<!--              fill: white;-->
-<!--              stroke: url(#grad-ucgg-generated);-->
-<!--              stroke-width: 1;-->
-<!--              stroke-dasharray: 60 90; /* 2π × 25 ≈ 158 */-->
-<!--            }-->
-
-<!--            svg {-->
-<!--              transform: rotate(-90deg);-->
-<!--              border-radius: 50%;-->
-<!--            }-->
-<!--          </style>-->
-<!--        </svg>-->
       </div>
     </div>
     <a class="mu-level" id="mu-level">
         12
     </a>
-
     <div class="col-md-8">
-      <%= render partial: 'profile_fields', locals: {form: f} %>
-      <div><%= f.submit t(:save), class: 'btn btn-success btn-block' %></div>
+      <div class="col-md-8">
+        <h4> Mi progreso </>
+        <p> ...</p>
+        <p> ... </p>
+        <p> ...</p>
+        <h4> Mis medallas </>
+        <p></p>
+        <p>
+          <img src="https://image.flaticon.com/icons/png/512/321/321854.png" style="width:100px; height: 100px">
+          <img src="https://user-images.githubusercontent.com/11304439/86490157-d48e3b80-bd3c-11ea-808c-937ac96fc67e.png" style="width:100px; height: 100px">
+          <img src="https://user-images.githubusercontent.com/11304439/86490157-d48e3b80-bd3c-11ea-808c-937ac96fc67e.png" style="width:100px; height: 100px">
+          <img src="https://user-images.githubusercontent.com/11304439/86490157-d48e3b80-bd3c-11ea-808c-937ac96fc67e.png" style="width:100px; height: 100px">
+        </p>
+      </div>
     </div>
   </div>
 <% end %>
