Removing top margin

--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -29,6 +29,10 @@
           .mu-kids-state.mu-state-initial {
             height: 100%;
           }
+
+          .mu-kids-exercise .mu-kids-blocks {
+            margin-top: 0;
+          }
         </style>
         <div style="display: flex; flex-flow: row; height: 100%; width: 100%">
           <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios" style="width: 50%; height: 100%">
