--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -19,6 +19,7 @@
 @import "modules/breadcrumb";
 @import "modules/gs-board";
 @import "modules/kids";
+@import "modules/kindergarten";
 @import "modules/kids_results";
 @import "modules/discussion";
 @import "modules/popover";
