--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -7,33 +7,13 @@
         <h3><%= t :only_landscape_support %></h3>
       </div>
 
-      <div class="mu-kids-exercise container-fluid" style="display: flex; flex-flow: column;">
+      <div class="mu-kids-exercise mu-kindergarten container-fluid" style="display: flex; flex-flow: column;">
 
         <div class="mu-kids-exercise-description mu-kids-exercise-description-fixed">
           <div class="mu-kids-character">
             <%= render partial: 'layouts/kids', locals: {exercise: exercise} %>
           </div>
         </div>
-        <style>
-          .gbs_lv.gbs_lvl.style-scope.gs-board,
-          .gbs_lv.gbs_lvr.style-scope.gs-board,
-          tr.style-scope.gs-board:first-child,
-          tr.style-scope.gs-board:last-child {
-            display: none
-          }
-
-          table.gbs_board.style-scope.gs-board {
-            padding: 3px;
-          }
-
-          .mu-kids-state.mu-state-initial {
-            height: 100%;
-          }
-
-          .mu-kids-exercise .mu-kids-blocks {
-            margin-top: 0;
-          }
-        </style>
         <div style="display: flex; flex-flow: row; height: 100%; width: 100%">
           <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios" style="width: 50%; height: 100%">
             <div class="mu-scenarios">
