--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -7,7 +7,7 @@
         <h3><%= t :only_landscape_support %></h3>
       </div>
 
-      <div class="mu-kids-exercise mu-kindergarten container-fluid" style="display: flex; flex-flow: column;">
+      <div class="mu-kids-exercise mu-kindergarten container-fluid">
 
         <div class="mu-kids-exercise-description mu-kids-exercise-description-fixed">
           <div class="mu-kids-character">
@@ -15,19 +15,19 @@
           </div>
         </div>
         <div style="display: flex; flex-flow: row; height: 100%; width: 100%">
-          <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios" style="width: 50%; height: 100%">
+          <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios">
             <div class="mu-scenarios">
               <div class="mu-kids-state mu-state-initial mu-kids-gbs-board-initial mu-initial-state">
                 <div class="mu-kids-state-image"><%= exercise.initial_state&.html_safe %></div>
               </div>
-              <div class="mu-kids-state mu-state-final mu-final-state" style="display: none">
+              <div class="mu-kids-state mu-state-final mu-final-state">
                 <div class="mu-kids-state-image"><%= exercise.final_state&.html_safe %></div>
               </div>
             </div>
             <ol class="indicators"></ol>
           </div>
 
-          <div class="mu-kids-blocks" style="width: 50%; height: 100%">
+          <div class="mu-kids-blocks">
             <%= yield :exercise_content %>
           </div>
         </div>
