--- a/app/views/book_discussions/index.html.erb
+++ b/app/views/book_discussions/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <%= content_for :extra_filters do %>
-  <%= discussion_dropdown_filter :language, discussions_languages(@discussions) do |language_filter| %>
+  <%= discussion_dropdown_filter :language, discussions_languages(@discussions), true do |language_filter| %>
     <%= language_filter.capitalize %>
   <% end %>
 <% end %>
@@ -18,6 +18,6 @@
   <% if @discussions.empty? %>
     <h4><%= t :no_questions %></h4>
   <% else %>
-      <%= render partial: 'layouts/discussions' %>
+    <%= render partial: 'layouts/discussions' %>
   <% end %>
 </div>
