--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -14,7 +14,7 @@
             <%= render partial: 'layouts/kids', locals: {exercise: exercise} %>
           </div>
         </div>
-        <div style="display: flex; flex-flow: row; height: 100%; width: 100%">
+        <div class="mu-kids-exercise-workspace">
           <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios">
             <div class="mu-scenarios">
               <div class="mu-kids-state mu-state-initial mu-kids-gbs-board-initial mu-initial-state">
