--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
             </span>
           </div>
           <div class="dropdown">
+            <a class="mu-level-small" style="color:white!important">12</a>
             <span id="profileDropdown" data-toggle="dropdown" aria-label="<%= t(:user) %>" role="menu" tabindex="0">
               <%= profile_picture %>
             </span>
