Fixing bug that prevents blocks in non-kids layout

--- a/app/views/layouts/exercise_inputs/editors/_custom.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_custom.html.erb
@@ -4,4 +4,4 @@
 
 <%= form.hidden_field :content, id: "mu-custom-editor-value", value: @current_content %>
 <%= form.hidden_field :content_extra, id: "mu-custom-editor-extra", value: @exercise.extra %>
-<%= form.hidden_field :content, id: "mu-custom-editor-test", value: @exercise.test %>
+<%= form.hidden_field :content_test, id: "mu-custom-editor-test", value: @exercise.test %>
