Rename stylesheets for consistency

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -12,7 +12,7 @@
 @import "modules/exercise_results";
 @import "modules/flash";
 @import "modules/gs-board";
-@import "modules/guide-corollary";
+@import "modules/guide_corollary";
 @import "modules/highlight";
 @import "modules/kids";
 @import "modules/kindergarten";
