--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -5,10 +5,9 @@
 <div class="row mu-tab-body">
   <div class="col-md-4 text-center">
     <%= image_tag @user.profile_picture, class: 'mu-user-avatar', id: 'mu-user-avatar' %>
-git  </div>
+  </div>
 </div>
 
 <%= content_for :no_container do %>
     <%= render partial: 'layouts/modals/avatar_picker' %>
 <% end %>
-git
