Add user profile stylesheet

--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for :user, url: update_user_path, :html => { id: 'mu-user-form' }, method: :put do |f| %>
-  <div>
+  <div class="mu-user-header">
     <h1><%= @user.name %></h1>
   </div>
   <div class="row mu-tab-body">
