Add edit profile button

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -4,3 +4,12 @@
   display: flex;
   align-items: center;
 }
+
+.mu-profile-action {
+  width: 150px;
+  height: 55px;
+
+  vertical-align: middle;
+
+  margin-left: auto;
+}
