Introducing mu-submit-button class

--- a/app/views/layouts/exercise_inputs/forms/_kids_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_kids_form.html.erb
@@ -3,7 +3,7 @@
              html: {role: 'form', class: 'new_solution mu-editor mu-editor-overlap'}) do |f| %>
   <%= render_exercise_input_editor f, exercise %>
 
-  <div class="actions mu-kids-submit-button">
+  <div class="actions mu-submit-button mu-kids-submit-button">
     <%= render_submit_button(@assignment) %>
   </div>
   <div class="actions mu-kids-reset-button"></div>
