--- a/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
+++ b/app/views/layouts/exercise_inputs/forms/_problem_form.html.erb
@@ -33,7 +33,7 @@
                  html: {role: 'form', class: "new_solution mu-editor mu-editor-overlap #{pending_messages_filter(@assignment)}"}) do |f| %>
       <%= render_exercise_input_editor f, exercise %>
 
-      <div class="actions">
+      <div class="actions mu-submit-button">
         <%= render_submit_button(@assignment) %>
       </div>
     <% end %>
