--- a/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_kindergarten.html.erb
@@ -15,6 +15,9 @@
           </div>
         </div>
         <div class="mu-kids-exercise-workspace">
+          <div class="mu-exercise-content mu-kids-blocks">
+            <%= yield :exercise_content %>
+          </div>
           <div class="mu-kids-states mu-kids-single-state mu-multiple-scenarios">
             <div class="mu-scenarios">
               <div class="mu-kids-state mu-state-initial mu-kids-gbs-board-initial mu-initial-state">
@@ -25,10 +28,6 @@
               </div>
             </div>
             <ol class="indicators"></ol>
-          </div>
-
-          <div class="mu-kids-blocks">
-            <%= yield :exercise_content %>
           </div>
         </div>
       </div>
