--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -192,7 +192,7 @@ $kids-speech-tabs-width: 40px;
         height: 100%;
         overflow: hidden;
       }
-      ul.mu-kids-character-speech-bubble-tabs {
+      .mu-kids-character-speech-bubble-tabs {
         display: flex;
         flex-direction: column;
         justify-content: center;
