Hiding hint in knder

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -50,6 +50,10 @@
   .mu-kids-compass-rose {
     display: none;
   }
+
+  // bubble tabs
+
+  .mu-kids-character .mu-kids-character-speech-bubble-tabs li.mu-kids-hint {
+    display: none;
+  }
 }
-
-
