Adding show context button

--- a/app/views/layouts/_kids.html.erb
+++ b/app/views/layouts/_kids.html.erb
@@ -13,6 +13,10 @@
         <li class="mu-kids-hint blink" data-target="hint" title="<%= t :need_a_hint %>">
           <i class="fa fa-fw fa-lightbulb-o"></i>
         </li>
+        <li class="separator"></li>
+        <li class="mu-kids-show-context" title="<%= t :context %>">
+          <i class="fa fa-fw fa-eye"></i>
+        </li>
       </ul>
   <% end %>
   <div class="mu-kids-character-speech-bubble-normal">
