Removing more overly-specific selectors

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kids.scss
@@ -182,12 +182,12 @@ $kids-speech-tabs-width: 40px;
           cursor: pointer;
         }
       }
-      div.mu-kids-character-speech-bubble-normal {
+      .mu-kids-character-speech-bubble-normal {
         width: 100%;
         height: 100%;
         overflow: hidden;
       }
-      div.mu-kids-character-speech-bubble-failed {
+      .mu-kids-character-speech-bubble-failed {
         width: 100%;
         height: 100%;
         overflow: hidden;
