--- a/app/views/layouts/_kids.html.erb
+++ b/app/views/layouts/_kids.html.erb
@@ -6,6 +6,10 @@
           <i class="fa fa-fw fa-file-text-o"></i>
         </li>
         <li class="separator"></li>
+        <li class="mu-kids-read-description" title="<%= t :read %>">
+          <i class="fa fa-fw fa-volume-up"></i>
+        </li>
+        <li class="separator"></li>
         <li class="mu-kids-hint blink" data-target="hint" title="<%= t :need_a_hint %>">
           <i class="fa fa-fw fa-lightbulb-o"></i>
         </li>
