Adding mu-exercise-content, for consistency

--- a/app/views/layouts/exercise_inputs/layouts/_input_primary.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_primary.html.erb
@@ -13,7 +13,7 @@
           <div class="mu-kids-character">
             <%= render partial: 'layouts/kids', locals: {exercise: exercise} %>
           </div>
-          <div class="mu-kids-blocks">
+          <div class="mu-exercise-content mu-kids-blocks">
             <%= yield :exercise_content %>
           </div>
         </div>
