--- a/app/views/layouts/exercise_inputs/layouts/_input_right.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_right.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6 exercise-assignment">
     <%= yield :assignment %>
   </div>
-  <div class="col-md-6 ace-editor-col">
+  <div class="mu-exercise-content col-md-6 ace-editor-col">
     <%= yield :exercise_content %>
   </div>
 </div>
