--- a/app/views/layouts/exercise_inputs/layouts/_input_bottom.html.erb
+++ b/app/views/layouts/exercise_inputs/layouts/_input_bottom.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12 ace-editor-col">
+  <div class="mu-exercise-content col-md-12 ace-editor-col">
     <%= yield :exercise_content %>
   </div>
 </div>
