Fix bug where avatar would randomly change if a new one was not picked when editing profile

--- a/app/views/users/_avatar_list.html.erb
+++ b/app/views/users/_avatar_list.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 
     <% if @user.image_url %>
-      <%= image_tag @user.image_url, class: 'mu-avatar-item' %>
+      <%= image_tag @user.image_url, class: 'mu-avatar-item', id: 'mu-user-image' %>
     <% end %>
   </div>
 </div>
